--- a/doc/doxygen.cfg.in
+++ b/doc/doxygen.cfg.in
@@ -2332,3 +2332,4 @@ GENERATE_LEGEND        = YES
 # This tag requires that the tag HAVE_DOT is set to YES.
 
 DOT_CLEANUP            = YES
+03000000100800000100000006010000,Twin USB Gamepad,platform:Mac OS X,a:b4,b:b2,x:b6,y:b0,back:b16,start:b18,leftstick:b20,rightstick:b22,leftshoulder:b8,rightshoulder:b10,dpup:h0.1,dpdown:h0.4,dpleft:h0.8,dpright:h0.2,leftx:a0,lefty:a2,rightx:a6,lefttrigger:b12,righttrigger:b14,
